# COMETH

./: .gitignore  BODY15.xml  BODY15_constrained.xml  BODY15_constrained_3D.xml  Bone.py  Completor.py  Keypoint.py  L266_test.ipynb  ML_ROM.py  README.md  Skeleton.py  SkeletonConverter.py  __init__.py  bioamass_debug.ipynb  build_dataset.py  constrain_from_pandas.py  constrain_from_pandas_missing.py  ekf_zv_model.ipynb  example.py  example_2D.py  h36m_test.ipynb  ice_test.ipynb  index.html  kinematic_example.ipynb  lifting2D_h36m.ipynb  liu_model.ipynb  multiview_aggregator_test_panoptic.ipynb  openpose-valid.csv  openpose-valid_constrained.csv  openpose-valid_filled.csv  openpose_valid_2D.csv  our_model.ipynb  panoptic_build_dataset.ipynb  prepare_dataset_for_FLK2.py  preprocess_example.ipynb  pyproject.toml  requirements.txt  result_handling.ipynb  run_test.sh  test.csv  (+14 more)
BiomechanicalModel/: DynamicSkeleton.py
COMETH/: BODY12.xml  Bone.py  COCO.xml  COCO_constrained_3D.xml  DynamicSkeleton.py  Skeleton.py  __init__.py  bsm_upper.osim  parameters.py
IMU-HPE_fusion/: test_ekf_zv_model.ipynb  test_li2022_model.ipynb  test_our_model.ipynb
Skeleton/: Bone.py  DynamicSkeleton.py  Keypoint.py  KinematicSkeleton.py  Skeleton.py  __init__.py
inverse_dynamics/: IMPROVEMENT_SUMMARY.md  Jkp.csv  S9_Directions.csv  crash_dump.pkl  data.csv  test_dynamics.ipynb  test_dynamics_claude.py  test_dynamics_claude_baseline.py  vicon_s1_acting1.csv
multiview_skeleton_fusion/: multiview_data_analysis.ipynb  test_accuracy.ipynb  test_accuracy.py
sf_utils/: comp_filter.py  kalman.py  (+5 more)
(+14 files in other folders)
