[project]
name = "biomechanical-model"
version = "0.0.1"
authors = [
  { name="Enrico Martini", email="enrico.martini@univr.it" },
]
description = "Biomechanical model of the human body"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/PARCO-LAB/Biomechanical-Model"
Issues = "https://github.com/PARCO-LAB/Biomechanical-Model/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Skeleton"]